TM-9849 Fixed not centered on checkbox.

--- a/web-app/tds/web-app/css/elements/component/api-action-view-edit-component.sass
+++ b/web-app/tds/web-app/css/elements/component/api-action-view-edit-component.sass
@@ -39,6 +39,9 @@
       width: 112px !important
   .api-action-parameters-form
     height: 430px
+    .group-boolean-fields
+      .fa
+        margin-left: 10px
     .api-boolean-icon
       font-size: 12px
     input
